package edu.illinoistech.hawk.hwijaya.op;

/**
 * Interface for the CancelMsg operation in the OutputProcessor.
 */
public interface CancelMsg {
    void cancelMsg();
}
