package edu.illinoistech.hawk.hwijaya.op;

/**
 * Implementation of the EnterPinMsg operation for GasPump1.
 */
public class EnterPinMsg1 implements EnterPinMsg {
    public void enterPinMsg() {}
}
