package edu.illinoistech.hawk.hwijaya.op;

/**
 * Implementation of the EnterPinMsg operation for GasPump2.
 */
public class EnterPinMsg2 implements EnterPinMsg {
    @Override
    public void enterPinMsg() {
        System.out.print("Debit card PIN established.");
    }
}
