package edu.illinoistech.hawk.hwijaya.op;

/**
 * Interface for the PayMsg operation in the OutputProcessor.
 */
public interface PayMsg {
    void payMsg();
}
