package edu.illinoistech.hawk.hwijaya.op;

/**
 * Implementation of the RejectMsg operation for GasPump1.
 */
public class RejectMsg1 implements RejectMsg {}
