package edu.illinoistech.hawk.hwijaya.op;

/**
 * Implementation of the RejectMsg operation for GasPump2.
 */
public class RejectMsg2 implements RejectMsg {}
