package edu.illinoistech.hawk.hwijaya.op;

/**
 * Implementation of the StopMsg operation for GasPump1.
 */
public class StopMsg1 implements StopMsg {}
