package edu.illinoistech.hawk.hwijaya.op;

/**
 * Implementation of the StopMsg operation for GasPump2.
 */
public class StopMsg2 implements StopMsg {}
