package edu.illinoistech.hawk.hwijaya.op;

import edu.illinoistech.hawk.hwijaya.ds.DataStore;

/**
 * Implementation of the WrongPinMsg operation for GasPump1.
 */
public class WrongPinMsg1 implements WrongPinMsg {
    @Override
    public void initialize(DataStore dataStore) {}

    @Override
    public void wrongPinMsg() {}
}
