package edu.illinoistech.hawk.hwijaya.output;

import edu.illinoistech.hawk.hwijaya.data.DataStore;

/**
 * Interface for the WrongPinMsg operation in the OutputProcessor.
 */
public interface WrongPinMsg {
    void initialize(DataStore dataStore);

    default void wrongPinMsg() {}
}
